--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "googleapis": "^148.0.0",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
-    "next": "15.2.4",
+    "next": "^15.4.8",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
     "openai": "^4.96.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1",
     "react-time-picker": "^7.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
